--- a/deafio-dia-do-rock/src/App.css
+++ b/deafio-dia-do-rock/src/App.css
@@ -27,6 +27,20 @@
 .App-link {
   color: #61dafb;
 }
+.search-bar{
+  display: flex;
+  background-color: white;
+  align-items: center;
+  border-radius: 3px;
+}
+.lupa{
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.input-title{
+  text-align: center;
+  margin-bottom: 5px;
+}
 
 @keyframes App-logo-spin {
   from {
