fix: project reference

--- a/src/DesafioDiaDoRock.UI/Pages/Add.razor
+++ b/src/DesafioDiaDoRock.UI/Pages/Add.razor
@@ -126,7 +126,7 @@
 
 
         var response = await eventService.Create(
-            new(
+            new Event(
                     0,
                     eventDTO.Band,
                     eventDTO.Date,
