--- a/src/DesafioDiaDoRock.UI/Pages/Add.razor.css
+++ b/src/DesafioDiaDoRock.UI/Pages/Add.razor.css
@@ -56,6 +56,7 @@
     font-size: 24px;
     margin-top: 36px;
     font-weight: 700;
+    text-align: center;
 }
 
 .div-result p {
@@ -75,4 +76,16 @@
     font-weight: 600;
     border: none;
     margin: 0px 20px 0px 20px;
+}
+
+@media (max-width: 459px) {
+    .div-add button {
+        width: 90%;
+        margin: 40px 5% 0px 5%;
+    }
+
+    .div-result button {
+        width: 90%;
+        margin: 0px 5% 0px 5%;
+    }
 }
