--- a/src/DesafioDiaDoRock.UI/wwwroot/css/app.css
+++ b/src/DesafioDiaDoRock.UI/wwwroot/css/app.css
@@ -194,6 +194,26 @@ code {
     height: 28px;
 }
 
+.div-search-resonse {
+    height: 82px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.div-search-resonse img {
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    margin: 5px 12px 5px 20px;
+}
+
+.div-search-resonse div p {
+    margin: 0px;
+    width: 90%;
+}
+
 @media (max-width: 459px){
     .actionbar {
         width: calc(100% - 64px);
