--- a/src/DesafioDiaDoRock.UI/wwwroot/css/app.css
+++ b/src/DesafioDiaDoRock.UI/wwwroot/css/app.css
@@ -107,12 +107,21 @@ code {
     color: #c02d76;
 }
 
-.actionbar {
+
+.theme-container.light-mode .actionbar {
     width: 375px;
-    background-color: #ECEDE6;
     position: absolute;
     z-index: 2;
-    height: 100vh;  
+    height: 100vh;
+    background-color: #E7E8E1;
+}
+
+.theme-container.dark-mode .actionbar {
+    width: 375px;
+    position: absolute;
+    z-index: 2;
+    height: 100vh;
+    background-color: #1a1a1a;
 }
 
 .div-input {
@@ -131,8 +140,21 @@ code {
     margin: 0px 0px 8px 11.09px;
 }
 
-.div-input input {
-    background-color: #E7E8E1;
+.theme-container.dark-mode .div-input input {
+    background-color: rgba(0, 0, 0, 0.2);
+    width: 100%;
+    height: 56px;
+    border-radius: 8px;
+    font-weight: 600;
+    font-size: 16px;
+    border: none;
+    outline: none;
+    padding-left: 50px;
+    color: #fff;
+}
+
+.theme-container.light-mode .div-input input {
+    background-color: #c4c4bf;
     width: 100%;
     height: 56px;
     border-radius: 8px;
@@ -143,7 +165,7 @@ code {
     padding-left: 50px;
 }
 
-#location {
+.theme-container.light-mode #location {
     background-color: #E7E8E1;
     width: 100%;
     height: 56px;
@@ -154,6 +176,19 @@ code {
     outline: none;
     padding: 0px 0px 0px 50px;
 }
+
+.theme-container.dark-mode #location {
+    background-color: rgba(0, 0, 0, 0.2);
+    width: 100%;
+    height: 56px;
+    border-radius: 8px;
+    font-weight: 600;
+    font-size: 16px;
+    border: none;
+    outline: none;
+    padding: 0px 0px 0px 50px;
+}
+
 
 .mud-input-control-input-container .mud-input.mud-input-underline:after {
     border-bottom: none;
