feat: Add Auth e Input Auth

--- a/src/DesafioDiaDoRock.UI/Layout/MainLayout.razor
+++ b/src/DesafioDiaDoRock.UI/Layout/MainLayout.razor
@@ -1,6 +1,7 @@
 ﻿@inherits LayoutComponentBase
 @inject IThemeService ThemeService;
 @inject IJSRuntime JSRuntime;
+@inject NavigationManager Navigation
 <MudThemeProvider />
 <MudPopoverProvider />
 <MudDialogProvider />
@@ -12,7 +13,14 @@
     </div>
 
     <main>
-        @Body
+        <AuthorizeView>
+            <Authorized>
+                @Body
+            </Authorized>
+            <NotAuthorized>
+                <RedirectToLogin />
+            </NotAuthorized>
+        </AuthorizeView>
         <div id="map"></div>
         <script>
             (g => { var h, a, k, p = "The Google Maps JavaScript API", c = "google", l = "importLibrary", q = "__ib__", m = document, b = window; b = b[c] || (b[c] = {}); var d = b.maps || (b.maps = {}), r = new Set, e = new URLSearchParams, u = () => h || (h = new Promise(async (f, n) => { await (a = m.createElement("script")); e.set("libraries", [...r] + ""); for (k in g) e.set(k.replace(/[A-Z]/g, t => "_" + t[0].toLowerCase()), g[k]); e.set("callback", c + ".maps." + q); a.src = `https://maps.${c}apis.com/maps/api/js?` + e; d[q] = f; a.onerror = () => h = n(Error(p + " could not load.")); a.nonce = m.querySelector("script[nonce]")?.nonce || ""; m.head.append(a) })); d[l] ? console.warn(p + " only loads once. Ignoring:", g) : d[l] = (f, ...n) => r.add(f) && u().then(() => d[l](f, ...n)) })
@@ -184,9 +192,15 @@
 </div>
 
 @code {
-    protected override void OnInitialized()
+
+    protected override async Task OnInitializedAsync()
     {
         ThemeService.OnThemeChanged += OnThemeChanged;
+        var token = await JSRuntime.InvokeAsync<string>("sessionStorage.getItem", "token");
+        if (string.IsNullOrEmpty(token))
+        {
+            Navigation.NavigateTo("/", true);
+        }
     }
 
     private void OnThemeChanged(bool isDarkMode)
