--- a/src/DesafioDiaDoRock.UI/Pages/SignUp.razor
+++ b/src/DesafioDiaDoRock.UI/Pages/SignUp.razor
@@ -9,13 +9,15 @@
     <form class="area-form" @onsubmit="HandleCreate">
         <h1 class="titulo">Rock Day</h1>
 
-        <input  class="input-form" type="text" placeholder="Enter your name" @bind="name">
-        <input  class="input-form" type="text" placeholder="Enter your email" @bind="email">
-        <input  class="input-form" type="password" placeholder="Enter your password" @bind="password">
-        <input class="input-form" type="password" placeholder="Confirm your password" @bind="confirmPassword">
+        <input class="input-form" type="text" placeholder="Enter your name" @bind="name" required>
+        <input class="input-form" type="email" placeholder="Enter your email" @bind="email" required>
+        <input class="input-form" type="password" placeholder="Enter your password" @bind="password" required>
+        <input class="input-form" type="password" placeholder="Confirm your password" @bind="confirmPassword" required>
 
 
         <Button Text="Sign Up"></Button>
+
+        <p class="error-message-response">@errorMessage</p>
 
         <p>Already have an account ? <a href="/">Login</a></p>
     </form>
@@ -28,6 +30,7 @@
     private string? email;
     private string? password;
     private string? confirmPassword;
+    private string? errorMessage;
 
     private async Task HandleCreate()
     {
@@ -43,6 +46,10 @@
 
         if (response.IsSuccess)
             Navigation.NavigateTo("/");
+        
+        else
+            errorMessage = response.Message;
+           
     }
 
 }
