--- a/src/DesafioDiaDoRock.UI/_Imports.razor
+++ b/src/DesafioDiaDoRock.UI/_Imports.razor
@@ -16,4 +16,8 @@
 @using DesafioDiaDoRock.ApplicationCore.Interfaces.Integrations
 @using DesafioDiaDoRock.ApplicationCore.Requests.Event
 @using MudBlazor
+@using Microsoft.AspNetCore.Components.Authorization
+@using static Microsoft.AspNetCore.Components.Web.RenderMode
+@using Microsoft.AspNetCore.Authorization
 
+@inject AuthenticationStateProvider AuthStateProvider
