--- a/src/DesafioDiaDoRock.UI/Pages/Search.razor
+++ b/src/DesafioDiaDoRock.UI/Pages/Search.razor
@@ -32,7 +32,7 @@
             </div>
 
             <div class="resonse-hour">
-                @e.FormatDateResponse();
+                @e.FormatDateResponse()
             </div>
         </div>
     }
