--- a/src/DesafioDiaDoRock.UI/Pages/Add.razor
+++ b/src/DesafioDiaDoRock.UI/Pages/Add.razor
@@ -192,7 +192,7 @@ else
         StateHasChanged();
     }
 
-    private void OnAuthenticationChanged(bool isDarkMode)
+    public void OnAuthenticationChanged(bool isDarkMode)
     {
         StateHasChanged();
     }
