--- a/src/DesafioDiaDoRock.UI/_Imports.razor
+++ b/src/DesafioDiaDoRock.UI/_Imports.razor
@@ -19,3 +19,4 @@
 @using Microsoft.AspNetCore.Components.Authorization
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Authorization
+@using DesafioDiaDoRock.UI.Services
