--- a/src/DesafioDiaDoRock.UI/Pages/Add.razor
+++ b/src/DesafioDiaDoRock.UI/Pages/Add.razor
@@ -24,7 +24,7 @@ else
                     <div><img src="/Icon-Checkmark-Circle.svg" /></div>
                     <div><h3>Obrigado pelo envio!</h3></div>
                     <div><p>Seu evento será avaliado pela nossa equipe e você receberá um E-mail em breve com o resultado da nossa aprovação</p></div>
-                    <button type="button">Fechar</button>
+                    <button type="button" @onclick="() => Restart(true)">Fechar</button>
 
                 }
                 else
@@ -33,18 +33,21 @@ else
                     <div><img src="/Icon-Error-Circle.svg" /></div>
                     <div><h3>Ops, algo saiu errado</h3></div>
                     <div><p>Ocorreu uma falha ao tentar submeter seu evento, por favor verifique sua conexão com a internet e tente novamente.</p></div>
-                    <button type="button">Fechar</button>
+                    <button type="button" @onclick="() => Restart(false)">Fechar</button>
                 }
             </div>
         }
         else
         {
-            <EditForm Model="eventDTO" OnSubmit="Create">
+            <EditForm Model="eventDTO" OnValidSubmit="Create">
+                <DataAnnotationsValidator />
+
                 <div class="div-add">
                     <div class="div-input">
                         <label for="band">Banda</label>
                         <div>
-                            <input type="text" id="band" @bind="eventDTO.Band" />
+                            <input type="text" id="band" @bind="eventDTO.Band" autocomplete="off" />
+                            <ValidationMessage For="@(() => eventDTO.Band)" />
                             @if (ThemeService.IsDarkMode == true)
                             {
                                 <img src="/Icon-Search-White.svg" class="img-input" />
@@ -59,7 +62,8 @@ else
                     <div class="div-input">
                         <label for="date">Data</label>
                         <div>
-                            <input type="text" id="date" @onchange="(e) => UpdateDate(e)" />
+                            <input value="@eventDTO.Date.ToString("yyyy-MM-ddTHH:mm")" type="text" id="date" @onchange="(e) => UpdateDate(e)" autocomplete="off" />
+                            <ValidationMessage For="@(() => eventDTO.Date)" />
                             @if (ThemeService.IsDarkMode == true)
                             {
                                 <img src="/Icon-Calendar-White.svg" class="img-input-date" />
@@ -76,7 +80,8 @@ else
                             <label for="location">Local</label>
                             <MudAutocomplete T="string" id="location" @bind-Value="eventDTO.Address" SearchFunc="@UpdateLocation"
                                              ResetValueOnEmptyText="true"
-                                             CoerceText="false" CoerceValue="false" Class="div-input-input" />
+                                             CoerceText="true" CoerceValue="false" Class="div-input-input" autocomplete="off" />
+                            <ValidationMessage For="@(() => eventDTO.Address)" />
                             @if (ThemeService.IsDarkMode == true)
                             {
                                 <img src="/Icon-Map-White.svg" class="img-input-location" />
@@ -118,11 +123,8 @@ else
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        if (firstRender)
-        {
-            var jsInterop = new JsInterop(JSRuntime);
-            await jsInterop.InitFlatpickr();
-        }
+        var jsInterop = new JsInterop(JSRuntime);
+        await jsInterop.InitFlatpickr();
     }
 
     void UpdateDate(ChangeEventArgs changeEventArgs)
@@ -134,13 +136,6 @@ else
 
         var placeResult = await placeService.GetPlaces(search);
 
-
-        // Place place = placeResult.places[0];
-        // address = place.formattedAddress;
-        // nameLocation = place.displayName.text;
-        // latitude = place.location.latitude;
-        // longitude = place.location.longitude;
-
         return placeResult.places.Select(x => x.displayName.text + " " + x.formattedAddress);
     }
 
@@ -148,34 +143,48 @@ else
     {
         processing = true;
 
-        var placeResult = await placeService.GetPlaces(eventDTO.Address);
-
-        eventDTO.NameLocation = placeResult.places[0].displayName.text;
-        eventDTO.Address = placeResult.places[0].formattedAddress;
-        eventDTO.Latitude = placeResult.places[0].location.latitude;
-        eventDTO.Longitude = placeResult.places[0].location.longitude;
-
-
-        var response = await eventService.Create(
-            new Event(
-                    0,
-                    eventDTO.Band,
-                    eventDTO.Date,
-                    eventDTO.NameLocation,
-                    eventDTO.Address,
-                    eventDTO.Latitude,
-                    eventDTO.Longitude,
-                    "/ironmaiden.jpg"
-                ));
-
-        result = response.IsSuccess;
-        created = response.IsSuccess;
-        processing = false;
-
-        if (response._code == 401)
+        try
         {
-            loginService.ToggleAuthentication();
-            StateHasChanged();
+            var placeResult = await placeService.GetPlaces(eventDTO.Address);
+
+            eventDTO.NameLocation = placeResult.places[0].displayName.text;
+            eventDTO.Address = placeResult.places[0].formattedAddress;
+            eventDTO.Latitude = placeResult.places[0].location.latitude;
+            eventDTO.Longitude = placeResult.places[0].location.longitude;
+
+            var response = await eventService.Create(
+                new Event(
+                        0,
+                        eventDTO.Band,
+                        eventDTO.Date,
+                        eventDTO.NameLocation,
+                        eventDTO.Address,
+                        eventDTO.Latitude,
+                        eventDTO.Longitude,
+                        "/ironmaiden.jpg"
+                    ));
+
+            if (response._code == 401)
+            {
+                loginService.ToggleAuthentication();
+                StateHasChanged();
+                created = false;
+            }
+            else
+            {
+                result = response.IsSuccess;
+                created = true;
+            }
+
+            processing = false;
+
+
+        }
+        catch (Exception)
+        {
+            result = false;
+            created = true;
+            processing = false;
         }
 
     }
@@ -184,7 +193,6 @@ else
     {
         ThemeService.OnThemeChanged += OnThemeChanged;
         loginService.OnAuthenticationChanged += OnAuthenticationChanged;
-
     }
 
     private void OnThemeChanged(bool isDarkMode)
@@ -200,5 +208,14 @@ else
     public void Dispose()
     {
         ThemeService.OnThemeChanged -= OnThemeChanged;
+    }
+
+    void Restart(bool clean)
+    {
+        if (clean)
+            eventDTO = new();
+
+        created = false;
+
     }
 }
