--- a/src/DesafioDiaDoRock.UI/Pages/Search.razor
+++ b/src/DesafioDiaDoRock.UI/Pages/Search.razor
@@ -23,7 +23,7 @@
 
     @foreach (var e in events)
     {
-        <div class="div-search-resonse">
+        <div class="div-search-resonse mb-5">
             <img src="@e.UrlImage" />
 
             <div class="resonse-address">
