--- a/src/DesafioDiaDoRock.UI/Pages/Login.razor
+++ b/src/DesafioDiaDoRock.UI/Pages/Login.razor
@@ -23,7 +23,8 @@
 
         <input class="input-form" type="email" placeholder="Enter your email" @bind="email" required>
         <input class="input-form" type="password" placeholder="Enter your password" @bind="password" required>
-        <Button Text="Login" ></Button>
+        <button type="submit" class="button-primary" >Login</button>
+        <button type="button" class="button-primary" @onclick="HandleLoginAdmin">Login Admin</button>
 
         <p class="error-message-response">@errorMessage</p>
 
@@ -54,7 +55,37 @@
         {
             var jsonString = response.Data.ToString();
             var loginResponse = JsonSerializer.Deserialize<LoginResponse>(jsonString);
-            
+
+            authenticationService.UpdateAuthenticationState(loginResponse.token);
+            if (!loginService.IsNecessaryAuthenticated)
+                Navigation.NavigateTo("/", forceLoad: true);
+
+            loginService.ToggleAuthentication();
+            StateHasChanged();
+
+
+
+
+        }
+        else
+            errorMessage = response.Message;
+    }
+
+    private async Task HandleLoginAdmin()
+    {
+        var loginDTO = new LoginDTO
+            {
+                Email = "admin@example.com",
+                Password = "1234567890"
+            };
+
+        var response = await userService.Login(loginDTO);
+
+        if (response.IsSuccess)
+        {
+            var jsonString = response.Data.ToString();
+            var loginResponse = JsonSerializer.Deserialize<LoginResponse>(jsonString);
+
             authenticationService.UpdateAuthenticationState(loginResponse.token);
 
             // var jsInterop = new JsInterop(JSRuntime);
@@ -62,6 +93,7 @@
 
             loginService.ToggleAuthentication();
             StateHasChanged();
+            Navigation.NavigateTo("/", forceLoad: true);
         }
         else
             errorMessage = response.Message;
@@ -73,7 +105,7 @@
         public string token { get; set; } = string.Empty;
     }
 
-    protected override void OnInitialized()
+    protected override async Task OnInitializedAsync()
     {
         loginService.OnAuthenticationChanged += OnAuthenticationChanged;
     }
